Mon May 31 18:50:28 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/PC_Handler.cpp:
        * DnC/Config_Handlers/Plan_Handler.cpp:

          Made changes to fix some testing errors.

Mon May 31 18:27:47 2004  Venkita Subramonian  <venkita@cs.wustl.edu>
	 * tools/Segment_Timer/Segment_Timer.h:
	 * tools/static_configurator/Static_Configurator.cpp:

	   Made some fixes related to DLL exports to get rid of
	   build errors on Windows.

Mon May 31 18:25:30 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Any_Handler.cpp:
        * DnC/Config_Handlers/CPK_Handler.cpp:
        * DnC/Config_Handlers/CompPkgDesc_Handler.cpp:
        * DnC/Config_Handlers/PC_Handler.cpp:
        * DnC/Config_Handlers/Plan_Handler.cpp:
        * DnC/Config_Handlers/Property_Handler.cpp:

          Made some changes to fix some testing errors.

Mon May 31 17:18:55 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Any_Handler.cpp:
        * DnC/Config_Handlers/CompIntrDesc_Handler.cpp:
        * DnC/Config_Handlers/CompPropDesc_Handler.cpp:
        * DnC/Config_Handlers/DT_Handler.cpp:
        * DnC/Config_Handlers/DT_Handler.h:

          Resolved Typecode and Any related errors relating to parsing the
          Deployment plan.

Mon May 31 16:33:16 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/ServantSourceGenerator.cpp:

          Added support for the emits-related navigation method,
          and automatic registration of value factories for
          event consumers. Also fixed bug in code generation
          for uses multiple.

        * ciao/Container_Base.h:

          Added CIAO_REGISTER_OBV_FACTORY macro, used by the
          CIDL compiler when generating factory registration
          calls for event consumers. There is also a version of
          this macro called CIAO_REGISTER_VALUE_FACTORY in
          CIAO_common.h. This version takes an extra argument