@@ -1,3 +1,15 @@
+Tue Jun  1 00:32:22 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>
+
+        * DnC/Config_Handlers/CAD_Handler.cpp:
+        * DnC/Config_Handlers/CPK_Handler.cpp:
+        * DnC/Config_Handlers/DnC_Dump.cpp:
+        * DnC/Config_Handlers/IAD_Handler.cpp:
+        * DnC/Config_Handlers/PC_Handler.cpp:
+        * DnC/Config_Handlers/Plan_Handler.cpp:
+        * DnC/Config_Handlers/Process_Element.cpp:
+
+          Made changes to fix some testing errors.
+
 Mon May 31 18:50:28 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>
 
         * DnC/Config_Handlers/PC_Handler.cpp:
